--- a/tasks.html
+++ b/tasks.html
@@ -177,7 +177,7 @@
                 <textarea name="chat" class="map__chat" placeholder="Введите текст"></textarea>
                 <button class="map__send">Отправить</button>
                 <button class="map__task">+ Задача</button>
-                <a href="" class="map__add"><img src="../images//dist/icons/clip.svg">Прикрепить</a>
+                <a href="" class="map__add"><img src="images//dist/icons/clip.svg">Прикрепить</a>
 
 
                 <div class="map__newTask">
