--- a/real.html
+++ b/real.html
@@ -52,13 +52,12 @@
 <body>
 
 <div class="work">
-
 	<section class="funnel">
 		<div class="funnel__content">
 			<div class="funnel__column">
 				<div class="funnel__info">
 					<div class="funnel__counter funnel__counter-red">22</div>
-					<div class="funnel__label">Пришла заявка</div>
+					<div class="funnel__label">Пишел заказ</div>
 				</div>
 				<div class="funnel__work" id="workColumn">
 					<div class="funnel__card card" draggable="true">
@@ -124,7 +123,7 @@
 			<div class="funnel__column">
 				<div class="funnel__info">
 					<div class="funnel__counter funnel__counter-blue">22</div>
-					<div class="funnel__label">Позвонили</div>
+					<div class="funnel__label">Взят в работу</div>
 				</div>
 				<div class="funnel__work">
 					<div class="funnel__card card" draggable="true">
@@ -155,7 +154,7 @@
 			<div class="funnel__column">
 				<div class="funnel__info">
 					<div class="funnel__counter funnel__counter-purple">22</div>
-					<div class="funnel__label">Рассматривают КП</div>
+					<div class="funnel__label">Дорабатывается</div>
 				</div>
 				<div class="funnel__work">
 					<div class="funnel__card card" draggable="true">
@@ -186,7 +185,7 @@
 			<div class="funnel__column">
 				<div class="funnel__info">
 					<div class="funnel__counter funnel__counter-orange">22</div>
-					<div class="funnel__label">Ожидаем оплаты</div>
+					<div class="funnel__label">Реализован</div>
 				</div>
 				<div class="funnel__work">
 					<div class="funnel__card card" draggable="true">
@@ -216,8 +215,135 @@
 	
 			<div class="funnel__column">
 				<div class="funnel__info">
+					<div class="funnel__counter funnel__counter-pink">22</div>
+					<div class="funnel__label">Подготовка</div>
+				</div>
+				<div class="funnel__work">
+					<div class="funnel__card card" draggable="true">
+						<div class="card__client">
+							<div class="card__name">Молод Иван Иванович</div>
+							<div class="card__phone">+7 (980) 234-24-24</div>
+						</div>
+						<div class="card__info">
+							<div class="card__finance">
+								<img src="images/dist/icons/service.svg" alt="">
+								<div class="card__group">
+									<div class="card__service">Услуга такая-то</div>
+									<div class="card__price">223 564 ₽</div>
+								</div>
+							</div>
+							<div class="card__liable">
+								<img src="images/dist/icons/card.svg" alt="">
+								<div class="card__group">
+									<div class="card__responsible-name">Артем Иванов</div>
+									<div class="card__responsible">Ответственный</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+	
+			<div class="funnel__column">
+				<div class="funnel__info">
+					<div class="funnel__counter funnel__counter-darkblue">22</div>
+					<div class="funnel__label">Коммуникация с контрагентом</div>
+				</div>
+				<div class="funnel__work">
+					<div class="funnel__card card" draggable="true">
+						<div class="card__client">
+							<div class="card__name">Молод Иван Иванович</div>
+							<div class="card__phone">+7 (980) 234-24-24</div>
+						</div>
+						<div class="card__info">
+							<div class="card__finance">
+								<img src="images/dist/icons/service.svg" alt="">
+								<div class="card__group">
+									<div class="card__service">Услуга такая-то</div>
+									<div class="card__price">223 564 ₽</div>
+								</div>
+							</div>
+							<div class="card__liable">
+								<img src="images/dist/icons/card.svg" alt="">
+								<div class="card__group">
+									<div class="card__responsible-name">Артем Иванов</div>
+									<div class="card__responsible">Ответственный</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+	
+	
+			<div class="funnel__column">
+				<div class="funnel__info">
 					<div class="funnel__counter funnel__counter-green">22</div>
-					<div class="funnel__label">Оплатили</div>
+					<div class="funnel__label">Доплата</div>
+				</div>
+				<div class="funnel__work">
+					<div class="funnel__card card" draggable="true">
+						<div class="card__client">
+							<div class="card__name">Молод Иван Иванович</div>
+							<div class="card__phone">+7 (980) 234-24-24</div>
+						</div>
+						<div class="card__info">
+							<div class="card__finance">
+								<img src="images/dist/icons/service.svg" alt="">
+								<div class="card__group">
+									<div class="card__service">Услуга такая-то</div>
+									<div class="card__price">223 564 ₽</div>
+								</div>
+							</div>
+							<div class="card__liable">
+								<img src="images/dist/icons/card.svg" alt="">
+								<div class="card__group">
+									<div class="card__responsible-name">Артем Иванов</div>
+									<div class="card__responsible">Ответственный</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+	
+	
+			<div class="funnel__column">
+				<div class="funnel__info">
+					<div class="funnel__counter funnel__counter-yellow">22</div>
+					<div class="funnel__label">Расчет с контрагентом</div>
+				</div>
+				<div class="funnel__work">
+					<div class="funnel__card card" draggable="true">
+						<div class="card__client">
+							<div class="card__name">Молод Иван Иванович</div>
+							<div class="card__phone">+7 (980) 234-24-24</div>
+						</div>
+						<div class="card__info">
+							<div class="card__finance">
+								<img src="images/dist/icons/service.svg" alt="">
+								<div class="card__group">
+									<div class="card__service">Услуга такая-то</div>
+									<div class="card__price">223 564 ₽</div>
+								</div>
+							</div>
+							<div class="card__liable">
+								<img src="images/dist/icons/card.svg" alt="">
+								<div class="card__group">
+									<div class="card__responsible-name">Артем Иванов</div>
+									<div class="card__responsible">Ответственный</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+	
+	
+			<div class="funnel__column">
+				<div class="funnel__info">
+					<div class="funnel__counter funnel__counter-rgb">22</div>
+					<div class="funnel__label">Передано подрядчику</div>
 				</div>
 				<div class="funnel__work">
 					<div class="funnel__card card" draggable="true">
@@ -248,6 +374,7 @@
 		
 		</div>
 	</section>
+
 </div>
 
 
