--- a/tasks.html
+++ b/tasks.html
@@ -40,7 +40,7 @@
 				<div class="sidebar__link"><img src="images/dist/icons/funnel.svg" alt="">Воронка</div>
 				<div class="sidebar__block">
 					<a href="index.html" class="sidebar__sell">Продажи</a>
-					<a href="#" class="sidebar__real">Реализация</a>
+					<a href="real.html" class="sidebar__real">Реализация</a>
 				</div>
 			</li>
 			<li class="sidebar__list"><a href="tasks.html" class="sidebar__link"><img src="images/dist/icons/chek.svg">Задачи</a></li>
@@ -51,36 +51,38 @@
 
 <body>
 
-<section class="tasks">
-    <div class="tasks__content">
-        <div class="tasks__row">
-            <div class="tasks__deadline tasks__info">Срок выполнения</div>
-            <div class="tasks__leader tasks__info">Ответственный</div>
-            <div class="tasks__object tasks__info">Объект</div>
-            <div class="tasks__type tasks__info">Тип задачи</div>
-            <div class="tasks__status tasks__info">Статус задачи</div>
-            <div class="tasks__text tasks__info">Текст задачи</div>
-            <div class="tasks__map tasks__info">Сделка</div>
-        </div> 
-        <div class="tasks__row">
-            <div class="tasks__deadline tasks__info">17.02.2022 22:40</div>
-            <div class="tasks__leader tasks__info">Артём Иванов</div>
-            <div class="tasks__object tasks__info">Иванов Иван Иванович</div>
-            <select class="tasks__type tasks__info">
-                <option value="value1" selected>Перезвонить</option>
-                <option value="value2">Значение 2</option>
-                <option value="value3">Значение 3</option>
-            </select>
-            <select class="tasks__status tasks__info">
-                <option value="value1">Выполнено1</option>
-                <option value="value2" selected>Не выполнено</option>
-                <option value="value3">Значение 3</option>
-            </select>
-            <div class="tasks__text tasks__info">Срочно нужно позвонить</div>
-            <div class="tasks__map tasks__info">link</div>
-        </div> 
-    </div>
-</section>
+<div class="work">
+    <section class="tasks">
+        <div class="tasks__content">
+            <div class="tasks__row">
+                <div class="tasks__deadline tasks__info">Срок выполнения</div>
+                <div class="tasks__leader tasks__info">Ответственный</div>
+                <div class="tasks__object tasks__info">Объект</div>
+                <div class="tasks__type tasks__info">Тип задачи</div>
+                <div class="tasks__status tasks__info">Статус задачи</div>
+                <div class="tasks__text tasks__info">Текст задачи</div>
+                <div class="tasks__map tasks__info">Сделка</div>
+            </div> 
+            <div class="tasks__row">
+                <div class="tasks__deadline tasks__info">17.02.2022 22:40</div>
+                <div class="tasks__leader tasks__info">Артём Иванов</div>
+                <div class="tasks__object tasks__info">Иванов Иван Иванович</div>
+                <select class="tasks__type tasks__info">
+                    <option value="value1" selected>Перезвонить</option>
+                    <option value="value2">Значение 2</option>
+                    <option value="value3">Значение 3</option>
+                </select>
+                <select class="tasks__status tasks__info">
+                    <option value="value1">Выполнено1</option>
+                    <option value="value2" selected>Не выполнено</option>
+                    <option value="value3">Значение 3</option>
+                </select>
+                <div class="tasks__text tasks__info">Срочно нужно позвонить</div>
+                <div class="tasks__map tasks__info">link</div>
+            </div> 
+        </div>
+    </section>
+</div>
 
 <section class="map" data-closeCall>
     <div class="map__block">
